feat: 예약/예약 대기 생성 조건 로직 추가